syntax = "proto3";

package task;

service BGPTasker {
    rpc AddRawParse (FilePath) returns (TaskReply) {}
    rpc AddBGPParse (FilePath) returns (TaskReply) {}
}

message FilePath {
    string path = 1;
}

message TaskReply {
    string message = 1;
}


service API {
    rpc SearchIP (IPAddr) returns (SearchReply) {}
}

message IPAddr {
    string ip = 1;
}

message SearchReply {
    string result = 1;
}